# friendly-rotary-phone

./: .gitignore  .mise.toml  README.md  mix.exs  pyproject.toml
.github/workflows/: ci.yml
config/: config.exs  dev.exs  prod.exs  test.exs
lib/: ml_lab.ex
lib/ml_lab/: application.ex
lib/ml_lab/ets/: active_constraint.ex  algorithms.ex  class_representation.ex  debug_trace.ex  machine_graphviz.ex  machine_introspection.ex  primitive.ex  struct.ex  struct_generating_machine.ex  transducer.ex
lib/ml_lab/ets/examples/: bubble_man.ex
notebooks/: 01_ets_starter.ipynb  ets_constraint_debugger.livemd  ets_intro.livemd  ets_machine_visualization.livemd  getting_started.livemd
src/friendly_rotary_phone/: __init__.py  algorithms.py  ets.py  examples.py  graphviz.py  io.py  visualization.py
test/: debug_trace_test.exs  ets_algorithms_test.exs  ets_struct_test.exs  machine_graphviz_test.exs  machine_introspection_test.exs  ml_lab_test.exs  struct_generating_machine_test.exs  transducer_test.exs
tests/: test_ets.py  test_io_and_visualization.py
