[project]
name = "friendly-rotary-phone"
version = "0.1.0"
description = "ETS thesis reimplementation playground in Python with Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jupyterlab>=4.2.0",
  "ipykernel>=6.29.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "networkx>=3.3",
  "matplotlib>=3.9.0",
  "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
